--- a/blog/source/_posts/自定义控件.md
+++ b/blog/source/_posts/自定义控件.md
@@ -33,10 +33,10 @@ protected void measureChildWithMargins(View child,
 其中getChildMeasureSpeac(int spec, int padding, int childDimension)
 ```java
 public static int getChildMeasureSpec(int spec, int padding, int childDimension) {
-       //获取ViewGroupde参数
+       //获取ViewGroup的参数
        int specMode = MeasureSpec.getMode(spec);
        int specSize = MeasureSpec.getSize(spec);
-
+       //获取可以使用的最大的size
        int size = Math.max(0, specSize - padding);
 
        int resultSize = 0;
@@ -44,8 +44,8 @@ public static int getChildMeasureSpec(int spec, int padding, int childDimension)
 
        //根据父控件的specMode分配子空间的大小 和 方式
        switch (specMode) {
-       // Parent has imposed an exact size on us
        case MeasureSpec.EXACTLY:
+       //childDimension是child的具体设置高度 如果<0则是match 或者 wrap
            if (childDimension >= 0) {
                resultSize = childDimension;
                resultMode = MeasureSpec.EXACTLY;
@@ -53,27 +53,19 @@ public static int getChildMeasureSpec(int spec, int padding, int childDimension)
                resultSize = size;
                resultMode = MeasureSpec.EXACTLY;
            } else if (childDimension == LayoutParams.WRAP_CONTENT) {
-               // Child wants to determine its own size. It can't be
-               // bigger than us.
                resultSize = size;
                resultMode = MeasureSpec.AT_MOST;
            }
            break;
 
-       // Parent has imposed a maximum size on us
        case MeasureSpec.AT_MOST:
            if (childDimension >= 0) {
-               // Child wants a specific size... so be it
                resultSize = childDimension;
                resultMode = MeasureSpec.EXACTLY;
            } else if (childDimension == LayoutParams.MATCH_PARENT) {
-               // Child wants to be our size, but our size is not fixed.
-               // Constrain child to not be bigger than us.
                resultSize = size;
                resultMode = MeasureSpec.AT_MOST;
            } else if (childDimension == LayoutParams.WRAP_CONTENT) {
-               // Child wants to determine its own size. It can't be
-               // bigger than us.
                resultSize = size;
                resultMode = MeasureSpec.AT_MOST;
            }
@@ -82,17 +74,13 @@ public static int getChildMeasureSpec(int spec, int padding, int childDimension)
        // 一般不会使用 一般是listview中会使用这种方式
        case MeasureSpec.UNSPECIFIED:
            if (childDimension >= 0) {
-               // Child wants a specific size... let him have it
                resultSize = childDimension;
                resultMode = MeasureSpec.EXACTLY;
            } else if (childDimension == LayoutParams.MATCH_PARENT) {
-               // Child wants to be our size... find out how big it should
-               // be
+               //View.sUseZeroUnspecifiedMeasureSpec=false always
                resultSize = View.sUseZeroUnspecifiedMeasureSpec ? 0 : size;
                resultMode = MeasureSpec.UNSPECIFIED;
            } else if (childDimension == LayoutParams.WRAP_CONTENT) {
-               // Child wants to determine its own size.... find out how
-               // big it should be
                resultSize = View.sUseZeroUnspecifiedMeasureSpec ? 0 : size;
                resultMode = MeasureSpec.UNSPECIFIED;
            }
@@ -101,3 +89,8 @@ public static int getChildMeasureSpec(int spec, int padding, int childDimension)
        return MeasureSpec.makeMeasureSpec(resultSize, resultMode);
    }
 ```
+| child\parent        | MeasureSpec.EXACTLY    |  MeasureSpec.AT_MOST   | MeasureSpec.UNSPECIFIED|
+ | --------   | -----:   | :----: |
+ | 香蕉        | $1      |   5    |
+ | 苹果        | $1      |   6    |
+ | 草莓        | $1      |   7    |
