--- a/blog/source/_posts/自定义控件.md
+++ b/blog/source/_posts/自定义控件.md
@@ -12,7 +12,7 @@ categories:
 
 ## measure
 
-ViewGroup 中measureChildWithMargins 调用 View的measure()
+### ViewGroup 中measureChildWithMargins 调用 View的measure()
 ```java
 protected void measureChildWithMargins(View child,
             int parentWidthMeasureSpec, int widthUsed,
@@ -30,6 +30,7 @@ protected void measureChildWithMargins(View child,
         child.measure(childWidthMeasureSpec, childHeightMeasureSpec);
     }
 ```
+<!-- more -->
 其中getChildMeasureSpeac(int spec, int padding, int childDimension)
 ```java
 public static int getChildMeasureSpec(int spec, int padding, int childDimension) {
@@ -71,13 +72,14 @@ public static int getChildMeasureSpec(int spec, int padding, int childDimension)
            }
            break;
 
-       // 一般不会使用 一般是listview中会使用这种方式
+       // 一般不会使用 这个代表不会管理子View的大小 例如ScrollView
        case MeasureSpec.UNSPECIFIED:
            if (childDimension >= 0) {
                resultSize = childDimension;
                resultMode = MeasureSpec.EXACTLY;
            } else if (childDimension == LayoutParams.MATCH_PARENT) {
-               //View.sUseZeroUnspecifiedMeasureSpec=false always
+               //View.sUseZeroUnspecifiedMeasureSpec=true 5.0以下
+               //5.0 以上 就是 false
                resultSize = View.sUseZeroUnspecifiedMeasureSpec ? 0 : size;
                resultMode = MeasureSpec.UNSPECIFIED;
            } else if (childDimension == LayoutParams.WRAP_CONTENT) {
@@ -89,8 +91,68 @@ public static int getChildMeasureSpec(int spec, int padding, int childDimension)
        return MeasureSpec.makeMeasureSpec(resultSize, resultMode);
    }
 ```
-| child\parent        | MeasureSpec.EXACTLY    |  MeasureSpec.AT_MOST   | MeasureSpec.UNSPECIFIED|
- | --------   | -----:   | :----: |
- | 香蕉        | $1      |   5    |
- | 苹果        | $1      |   6    |
- | 草莓        | $1      |   7    |
+總的來説就是這樣的 MeasureSpec.UNSPECIFIED 5.0 以上以下有区别 一般不会用到
+
+ |  Child \ Parent        | MeasureSpec.EXACTLY    |  MeasureSpec.AT_MOST   | MeasureSpec.UNSPECIFIED|
+ | :-------:              | :-----:                | :----:                 | :----:                 |
+ | 具體尺寸   |  size=具體 MeasureSpec.EXACTLY  | size=具體 MeasureSpec.EXACTLY | size = 具體   MeasureSpec.EXACTLY |
+ | WRAP_CONTENT |size=size MeasureSpec.AT_MOST| size=size MeasureSpec.AT_MOST |size=size MeasureSpec.UNSPECIFIED|
+ | MATCH_PARENT| size=size MeasureSpec.EXACTLY | size=size MeasureSpec.AT_MOST | size=size MeasureSpec.UNSPECIFIED|
+
+ ### view的measure(childWidthMeasureSpec, childHeightMeasureSpec)方法
+ measure()---这个方法用于设定这个子View到底有多大，并且调用onMeasure()方法
+ ```java
+ protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
+       setMeasuredDimension(getDefaultSize(getSuggestedMinimumWidth(), widthMeasureSpec),
+               getDefaultSize(getSuggestedMinimumHeight(), heightMeasureSpec));
+   }
+ ```
+getSuggestedMinimumHeight() 与 getSuggestedMinimumWidth() 方法雷同 用于计算 最小的值 背景与view自身设置的值
+```java
+protected int getSuggestedMinimumWidth() {
+        return (mBackground == null) ? mMinWidth : max(mMinWidth, mBackground.getMinimumWidth());
+    }
+```
+getDefaultSize() 最终根据自身的MeasureSpec.Mode 来决定自身到底有多大
+```java
+public static int getDefaultSize(int size, int measureSpec) {
+       int result = size;
+       int specMode = MeasureSpec.getMode(measureSpec);
+       int specSize = MeasureSpec.getSize(measureSpec);
+
+       switch (specMode) {
+       case MeasureSpec.UNSPECIFIED:  
+           result = size; //这个size是getSuggestedMinimumWidth中获得的最小度  一般=不会用到 但是在lsitView中高度设定不相符时使用min来设定可以确定高度
+           break;
+       case MeasureSpec.AT_MOST:
+       case MeasureSpec.EXACTLY:
+           result = specSize;
+           break;
+       }
+       return result;
+   }
+```
+### 重点强调的是 自定义控件的onmeasure方法重写 必须设定WRAP_CONTENT时的状态
+因为在WRAP_CONTENT情况下 measure的模式为MeasureSpec,AT_MOST 并且大小也与父控件大小相同 这样的话 WRAP_CONTENT就与MATCH_PARENT的效果相同 必须要重写设置大小
+```java
+@Override
+   protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
+
+       int widthMode = MeasureSpec.getMode(widthMeasureSpec);
+       int heightMode = MeasureSpec.getMode(heightMeasureSpec);
+
+       int width = 100; //这个高度宽度需要计算 计算出自己到底需要多少
+       int height = 100;
+
+       if (widthMode == MeasureSpec.AT_MOST && heightMode == MeasureSpec.AT_MOST) { // 添加判断才可以确定具体尺寸来设置WRAP_CONTENT
+           setMeasuredDimension(width, height);
+       } else if (widthMode == MeasureSpec.AT_MOST) {
+           setMeasuredDimension(width, getDefaultSize(getSuggestedMinimumHeight(), heightMeasureSpec));
+       } else if (height == MeasureSpec.AT_MOST) {
+           setMeasuredDimension(getDefaultSize(getSuggestedMinimumWidth(), widthMeasureSpec), height);
+       } else {
+           super.onMeasure(widthMeasureSpec, heightMeasureSpec);
+       }
+
+   }
+```
