--- a/blog/source/_posts/自定义控件.md
+++ b/blog/source/_posts/自定义控件.md
@@ -156,3 +156,53 @@ public static int getDefaultSize(int size, int measureSpec) {
 
    }
 ```
+### 知識點 在ScrollView嵌套ListView中我們經常這樣寫
+```java
+@Override
+    protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
+        int height = MeasureSpec.makeMeasureSpec(Integer.MAX_VALUE>>2, MeasureSpec.AT_MOST);
+        super.onMeasure(widthMeasureSpec, height);
+    }
+```
+就是因爲本身他的父控件ScrollView屬性是MeasureSpec.UNSPECIFIED listview本身的屬性也變成這樣，需要我們手動來更改成爲MeasureSpec.AT_MOST,讓listView重新計算自己的高度--onMeasure()中 heightSize就是我們傳入的30位的最大值
+```java
+if (heightMode == MeasureSpec.AT_MOST) {
+            // TODO: after first layout we should maybe start at the first visible position, not 0
+            heightSize = measureHeightOfChildren(widthMeasureSpec, 0, NO_POSITION, heightSize, -1);
+        }
+```
+將方法中除了我們本身傳過去的heightSize以外的代碼刪除 發現本身就命名爲maxHeight，如果 測量的高度不大於我們的maxHeight就將測量值(所有子View的高度)返回，所以這樣重寫之後，listView默認展示所有的條目，如果不是最大值那麽如果測量值大於你設定的值那麽也將顯示不全
+```java
+final int measureHeightOfChildren(int widthMeasureSpec, int startPosition, int endPosition,
+           int maxHeight, int disallowPartialChildPosition) {
+
+       // Include the padding of the list
+       int returnedHeight = mListPadding.top + mListPadding.bottom;
+                      .
+                      .
+                      .
+       for (i = startPosition; i <= endPosition; ++i) {
+
+           returnedHeight += child.getMeasuredHeight();
+
+           if (returnedHeight >= maxHeight) {
+               // We went over, figure out which height to return.  If returnedHeight > maxHeight,
+               // then the i'th position did not fit completely.
+               return (disallowPartialChildPosition >= 0) // Disallowing is enabled (> -1)
+                           && (i > disallowPartialChildPosition) // We've past the min pos
+                           && (prevHeightWithoutPartialChild > 0) // We have a prev height
+                           && (returnedHeight != maxHeight) // i'th child did not fit completely
+                       ? prevHeightWithoutPartialChild
+                       : maxHeight;
+           }
+
+           if ((disallowPartialChildPosition >= 0) && (i >= disallowPartialChildPosition)) {
+               prevHeightWithoutPartialChild = returnedHeight;
+           }
+       }
+
+       // At this point, we went through the range of children, and they each
+       // completely fit, so return the returnedHeight
+       return returnedHeight;
+   }
+```
