--- a/blog/source/_posts/自定义控件.md
+++ b/blog/source/_posts/自定义控件.md
@@ -11,10 +11,12 @@ categories:
 # 自定义控件学习笔记
 
 ## measure
+### 总体调用流程
+
 
 ### ViewGroup 中measureChildWithMargins 调用 View的measure()
 ```java
-protected void measureChildWithMargins(View child,
+  protected void measureChildWithMargins(View child,
             int parentWidthMeasureSpec, int widthUsed,
             int parentHeightMeasureSpec, int heightUsed) {
                //获取child的LayoutParams
@@ -206,3 +208,47 @@ final int measureHeightOfChildren(int widthMeasureSpec, int startPosition, int e
        return returnedHeight;
    }
 ```
+## layout
+### onlayout() 這個方法是ViewGroup方法需要重寫的方法
+首先是View的layout()方法
+```java
+public void layout(int l, int t, int r, int b) {
+        if ((mPrivateFlags3 & PFLAG3_MEASURE_NEEDED_BEFORE_LAYOUT) != 0) {
+            onMeasure(mOldWidthMeasureSpec, mOldHeightMeasureSpec);
+            mPrivateFlags3 &= ~PFLAG3_MEASURE_NEEDED_BEFORE_LAYOUT;
+        }
+                `
+                `
+                `
+        boolean changed = isLayoutModeOptical(mParent) ?
+                setOpticalFrame(l, t, r, b) : setFrame(l, t, r, b);
+
+        if (changed || (mPrivateFlags & PFLAG_LAYOUT_REQUIRED) == PFLAG_LAYOUT_REQUIRED) {
+            onLayout(changed, l, t, r, b);
+                `
+                `
+                ``
+        }
+
+        mPrivateFlags &= ~PFLAG_FORCE_LAYOUT;
+        mPrivateFlags3 |= PFLAG3_IS_LAID_OUT;
+    }
+```
+判斷changed setOpticalFrame 最終走的也是setFrame 判斷位置是否發生了變化
+```java
+protected boolean setFrame(int left, int top, int right, int bottom) {
+        boolean changed = false;
+        if (mLeft != left || mRight != right || mTop != top || mBottom != bottom) {
+            changed = true;
+              `
+              `
+        return changed;
+    }
+```
+發生變化走onLayout方法====viewGroup調用onLayout方法 在各個的onlayou方法中調用view的layou方法確定位置
+### 總結
+父View的layout方法調用父View的onlyout調用子View的layout
+
+父view的onLayout來確定子View的具體位置 子View的layout方法來確定滋生的位置  
+
+其中所有的位置都是相當於父控件的 包括View.getleft 等方法也是相對於父控件的
