--- a/blog/source/_posts/自定义控件.md
+++ b/blog/source/_posts/自定义控件.md
@@ -10,8 +10,46 @@ categories:
 ---
 # 自定义控件学习笔记
 
+## 总体调用流程
+### ViewRootImpl 是View开始的入口
+### ViewRootImpl中会首先调用performTraversals()
+```java
+private void performTraversals() { //android19
+  ...
+  //获得最上层控件的MeasureSpec
+1672 int childWidthMeasureSpec = getRootMeasureSpec(mWidth, lp.width);
+1673 int childHeightMeasureSpec = getRootMeasureSpec(mHeight, lp.height);
+
+  // Ask host how big it wants to be
+1682 performMeasure(childWidthMeasureSpec, childHeightMeasureSpec);
+...
+1744 performLayout(lp, desiredWindowWidth, desiredWindowHeight);
+...
+1883 performDraw(); //进入DecorView中最终调用View的Draw()
+}
+```
+
+```java
+private void performMeasure(int childWidthMeasureSpec, int childHeightMeasureSpec) {
+      mView.measure(childWidthMeasureSpec, childHeightMeasureSpec);
+}
+//例如LinearLayout的Onmeasure中就会调用走正常的测量流程
+void measureChildBeforeLayout(View child, int childIndex,
+            int widthMeasureSpec, int totalWidth, int heightMeasureSpec,
+            int totalHeight) {
+        measureChildWithMargins(child, widthMeasureSpec, totalWidth,
+                heightMeasureSpec, totalHeight);
+}
+```
+```java
+private void performLayout(WindowManager.LayoutParams lp, int desiredWindowWidth,
+            int desiredWindowHeight) {
+            host.layout(0, 0, host.getMeasuredWidth(), host.getMeasuredHeight());
+}
+```
+
+
 ## measure
-### 总体调用流程
 
 
 ### ViewGroup 中measureChildWithMargins 调用 View的measure()
